fix scrolling in modal windows on iPhone (#475)
* fix scrolling in modal windows on iPhone

* MODUL-459 - added sandbox demos

--- a/src/components/edit-window/edit-window.scss
+++ b/src/components/edit-window/edit-window.scss
@@ -113,6 +113,7 @@
         overflow-y: auto;
         min-height: 120px;
         position: relative;
+        -webkit-overflow-scrolling: touch;
 
         @include m-fixed-box-padding();
         @include m-scrollbar();
